syntax = "proto3";

package quiz.v1;

// entities
message Quiz {
  string id = 1;
  string text = 2;
  map<string, Question> questions = 3;
  int32 participant_count = 4;
}

message Question {
  string id = 1;
  string text = 2;
  map<string, Answer> answers = 3;
}

message Answer {
  string id = 1;
  string text = 2;
}

message ParticipantAnswer {
  string question_id = 1;
  string answer_id = 2;
}

// schemas
message ListRequest {}

message ListResponse {
  repeated Quiz quizzes = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  Quiz quiz = 1;
}

message ParticipateRequest {
  string quiz_id = 1;
  string participant_id = 2;
  repeated ParticipantAnswer participant_answers = 3;
}

message ParticipateResponse {
  int32 correct_answers = 1;
  int32 incorrect_answers = 2;
  int32 participant_count = 3;
  int32 participant_score = 4;
  int32 participant_overall_score = 5;
}

service QuizService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Participate(ParticipateRequest) returns (ParticipateResponse) {}
}
